Link author name to bfer.land in footer and topbar

--- a/index.html
+++ b/index.html
@@ -516,7 +516,7 @@ body::before{content:'';position:fixed;inset:0;background:radial-gradient(ellips
   </div>
 
   <footer class="landing-footer">
-    Built by <span class="by">Brenden Ferland</span> &middot; All solving happens in your browser &middot; <a href="https://github.com/PEEKPerformer/when2solve" target="_blank">GitHub</a>
+    Built by <a href="https://bfer.land" target="_blank" class="by">Brenden Ferland</a> &middot; All solving happens in your browser &middot; <a href="https://github.com/PEEKPerformer/when2solve" target="_blank">GitHub</a>
   </footer>
 </div>
 
@@ -525,7 +525,7 @@ body::before{content:'';position:fixed;inset:0;background:radial-gradient(ellips
   <div class="topbar">
     <div class="topbar-left">
       <div class="topbar-brand" onclick="goHome()">WHEN2SOLVE</div>
-      <span class="topbar-by">by Brenden Ferland</span>
+      <a href="https://bfer.land" target="_blank" class="topbar-by">by Brenden Ferland</a>
       <div class="topbar-event" id="eventInfo"></div>
     </div>
     <div class="topbar-center">
